# tp_cpp2020

./: .travis.yml  CMakeLists.txt  README.md
IZ1/: CMakeLists.txt
IZ1/project/include/: matrix.h
IZ1/project/src/: main.c  matrix.c
IZ1/project/tests/: main.cpp
IZ1/project/tests/data/: test5.txt  test8.txt
iz1/: .travis.yml  CMakeLists.txt  Makefile
iz1/project/include/: matrix.h
iz1/project/src/: main.c  matrix.c
iz1/project/tests/data/: test1.txt
project/include/: matrix.h  utils.h
project/include/MT/: MT_temperature_jump.h
project/include/ST/: ST_temperature_jump.h
project/src/: main.c  utils.c
project/src/MT/: MT_calculate_temperature_jump.c
project/src/ST/: ST_calculate_temperature_jump.c
project/tests/: generated_with_python.txt  main.cpp  make_array.py
project/tests/data/: test.txt  test1.txt  test3.txt  test4.txt
